--- a/styles/index.css
+++ b/styles/index.css
@@ -159,6 +159,11 @@ footer a
 	text-decoration: none;
 	color: white;
 }
+
+.nav-list a:link{
+  color:white;
+}
+
 .nav-list a:visited{
 	color: cornflowerblue;
 }
